--- a/feedback-worker/package.json
+++ b/feedback-worker/package.json
@@ -7,7 +7,7 @@
     "deploy": "wrangler deploy"
   },
   "devDependencies": {
-    "@cloudflare/workers-types": "^4.0.0",
+    "@cloudflare/workers-types": "^4.20260203.0",
     "typescript": "^5.0.0",
     "wrangler": "^4.61.0"
   }
