--- a/public/manifest.json
+++ b/public/manifest.json
@@ -9,18 +9,18 @@
   "orientation": "landscape",
   "icons": [
     {
-      "src": "/img/favicon-32x32.png",
+      "src": "img/favicon-32x32.png",
       "sizes": "32x32",
       "type": "image/png"
     },
     {
-      "src": "/img/favicon-192x192.png",
+      "src": "img/favicon-192x192.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "any maskable"
     },
     {
-      "src": "/img/favicon-512x512.png",
+      "src": "img/favicon-512x512.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any maskable"
