Added support for Pets and Pseudopets

--- a/.gitignore
+++ b/.gitignore
@@ -35,4 +35,5 @@ npm-debug.log*
 nul
 
 # Raw Data
-raw_data_homecoming-raw_data_homecoming-20251209_7415/
+raw_data_homecoming-20251209_7415
+raw_data_homecoming-20251209_7415/all_power_search.json
