--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
   },
   "homepage": "https://github.com/wednesdaywoe/CoH-Planner#readme",
   "dependencies": {
+    "@supabase/supabase-js": "^2.97.0",
     "@tanstack/react-router": "^1.150.0",
+    "nanoid": "^5.1.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "zustand": "^5.0.10"
